k8s/rev-proxy-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: rev-proxy-svc
spec:
  selector:
    app: rev-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: rev-proxy-http
